--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/*.js"
   },
   "author": "",
   "license": "MIT",
@@ -16,8 +16,9 @@
     "aws-sdk": "^2.220.1",
     "bl": "^1.2.2",
     "lru-cache": "^4.1.2",
-    "memcached": "^2.2.2",
-    "nodemon": "^1.17.3",
-    "tap": "^11.1.3"
+    "memcached": "^2.2.2"
+  },
+  "devDependencies": {
+    "tap": "^11.1.4"
   }
 }
